压缩了图片

--- a/css/index.css
+++ b/css/index.css
@@ -18,17 +18,32 @@ body{
 }
 .main .header .header_left {
     display: flex;
+    cursor: pointer;
 }
+
 .main .header .header_right {
     display: flex;
     align-items: center;
 }
 
 .main .header .header_right p {
-    padding-left: 30px;
-    color: #5C77B2;
     font-weight: bold;
     font-size: 20px;
+}
+
+.main .header .header_right div {
+    cursor: pointer;
+    width: 150px;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #5C77B2;
+}
+
+.main .header .header_right .div_hover:hover {
+    background-color: #5C77B2;
+    color: #FFFFFF;
 }
 
 /* header --end*/
