--- a/css/index.css
+++ b/css/index.css
@@ -3,16 +3,24 @@ body{
 }
 
 .main{
+    min-width: 1200px;
     min-height:100vh;
     display: flex;
     flex-direction: column;
 }
 
 /* header --start*/
-.main .header{
+
+.main .header_box{
+    width: 100%;
     height:60px;
     background:#FFFFFF;
-    padding: 0 360px;
+    display: flex;
+    justify-content: center;
+}
+.main .header{
+    height: 100%;
+    width: 1200px;
     display: flex;
     justify-content: space-between;
 }
@@ -49,10 +57,17 @@ body{
 /* header --end*/
 
 /* footer --start*/
-.main .footer{
+
+.main .footer_box {
+    width: 100%;
     height:200px;
     background-color: rgba(0, 0, 0, 1);
-    padding: 0 360px;
+    justify-content: center;
+    display: flex;
+}
+.main .footer{
+    width: 1200px;
+    height: 100%;
     display: flex;
     align-content: center;
     justify-content: space-between;
