--- a/css/index.css
+++ b/css/index.css
@@ -113,3 +113,40 @@ body{
     display: flex;
     justify-content: space-between;
 }
+
+/** 弹框 */
+
+.mask {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    overflow: hidden;
+    pointer-events: none;
+    background: rgba(0,0,0,.3);
+}
+.model {
+    background-color: #fff;
+    top: 50%;
+    bottom: 0;
+    left: 50%;
+    right: 0;
+    width: 600px;
+    height: 400px;
+    position: absolute;
+    transform: translate(-50%, -50%);
+}
+
+.model_back {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background: rgba(0,0,0,.3);
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    overflow: hidden;
+    pointer-events: none;
+}
