--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,13 @@
+@media only screen and (max-width: 1400px) {
+    .main .jingyu {
+        margin-top: 40px;
+        width: 321px;
+        height: 281px;
+        position: absolute;
+        right: -80px;
+    }
+}
+
 @media only screen and (max-width: 1200px) {
     .main {
         min-width: 340px;
