--- a/css/main.css
+++ b/css/main.css
@@ -59,6 +59,24 @@
         height: 300px;
         background-size: 100% 100%;
     }
+
+    .main .lang_box {
+        padding: 0 !important;
+        top: 50px;
+        margin-left: -20px;
+    }
+
+    .main .lang {
+        width: 60px;
+    }
+
+    .main .lang li {
+        font-size: 16px;
+        line-height: 32px;
+        color: #2F519C;
+        cursor: pointer;
+    }
+
     /** 头部结束 */
 
     /** 内容开始 */
