中英文切换下拉框调整

--- a/css/index.css
+++ b/css/index.css
@@ -43,7 +43,7 @@ body{
 
 .main .header .header_right div {
     cursor: pointer;
-    padding: 0 30px;
+    padding: 0 45px;
     height: 100%;
     display: flex;
     justify-content: center;
@@ -72,12 +72,19 @@ body{
 .header_arrow {
     width: 15px;
     height: 10px;
-    margin-left: 15px;
+    margin-left: 16px;
 }
 
 .lang li:hover {
     background-color: #2F519C;
     color: #ffffff !important;
+}
+
+.lang_select {
+    padding: 0 0 0 30px !important;
+    position: relative;
+    width: 90px;
+    box-sizing: border-box;
 }
 
 .lang_select:hover .lang_box{
@@ -94,21 +101,26 @@ body{
     height: auto !important;
     width: auto !important;
     background-color: #ffffff;
-    margin-left: -45px;
     display: none !important;
+    padding: 0 !important;
+    left: 0;
 }
 .lang {
-    width: 100px;
+    width: 90px;
     padding: 10px 0;
     text-align: center;
 }
 
 .lang li {
     font-size: 20px;
-    line-height: 36px;
+    line-height: 40px;
     color: #2F519C;
     cursor: pointer;
 }
+
+.github_icon{
+     padding: 0 0 0 30px !important;
+ }
 
 /* header --end*/
 
@@ -138,7 +150,7 @@ body{
     display: flex;
     align-items: center;
     width: 320px;
-    justify-content: space-between;
+    justify-content: end;
 }
 
 .footer_icon img{
