解决IE浏览器github图标不居右显示

--- a/css/index.css
+++ b/css/index.css
@@ -150,7 +150,7 @@ body{
     display: flex;
     align-items: center;
     width: 320px;
-    justify-content: end;
+    justify-content: flex-end;
     cursor: pointer;
 }
 
